--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --inspect",
+    "dev": "next dev -p 3001 --inspect",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start -p 3001"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
